<resources>
    <string name="app_name">汽车之家</string>
    <string name="test_text">测试文字</string>

    <string name="close">关闭</string>
    <string name="return_text">返回</string>
    <string name="all_barnd">全部品牌</string>
    <string name="all_types">全部类别</string>
    <string name="Vehicle_system_Forum">车系论坛</string>
    <string name="Find_a_team_for_your_car">为你的爱车找到队伍</string>
    <string name="Regional_Forum">地区论坛</string>
    <string name="Fellow_two_tears">老乡见老乡,两眼泪汪汪</string>
    <string name="Theme_Forum">主题论坛</string>
    <string name="Gathering_place_of_interest">兴趣爱好的聚集地</string>
    <string name="brand">品牌</string>
    <string name="price">价格</string>
    <string name="level">级别</string>
    <string name="sort">排序</string>
    <string name="all">全部</string>
    <string name="Twenty_four_hours_hot">  24小时热门</string>
    <string name="Login_now_experience_more">立即登录,  体验更多</string>
    <string name="Account_login">账号登录</string>
    <string name="QQ_login">QQ登录</string>
    <string name="Micro_blog_login">微博登录</string>
    <string name="WeChat_login">微信登录</string>

    <string name="My_coupons">我的优惠券</string>
    <string name="My_collection">我的收藏</string>
    <string name="Browsing_history">浏览历史</string>
    <string name="drafts">草稿箱</string>
    <string name="set_up">设置</string>
    <string name="Beijing">北京</string>
    <string name="condition">条件</string>
    <string name="Hot_car_line">热门车系</string>
    <string name="letter">字母</string>
    <string name="Top_selling">热销排行</string>
    <string name="Hot_brand">热门品牌</string>
    <string name="Flagship_car">主打车</string>
    <string name="extension">推广</string>
    <string name="Comment">发表评论...</string>
    <string name="edit">编辑:</string>
    <string name="Related_vehicle_system">相关车系</string>
    <string name="Car_buying_calculation">购车计算</string>
    <string name="Call_immediately">立即拨打</string>
    <string name="Inquiry_base_price">询底价</string>
    <string name="Selection_level">选择级别</string>
    <string name="Special_hot">特惠热卖</string>
    <string name="Brand_boutique">品牌精品</string>
    <string name="List_of_goods">商品列表</string>
    <string name="my">我</string>
    <string name="use_car_number">1/23</string>
    <string name="Activity_zone">活动专区</string>
    <string name="More_activity">更多活动</string>
    <string name="find">发现</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="number_mall_user">手机号/邮箱/用户名</string>
    <string name="passwork">密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="can_also_be_logged_in_the_following_way">还可以用以下方式登录</string>
    <string name="add_eighty_six">+86</string>
    <string name="please_enter_your_phone_number">请输入手机号</string>
    <string name="next_step">下一步</string>
    <string name="registration_shall_be_deemed_as_consent">注册即视为同意</string>
    <string name="user_service_agreement">用户服务协议</string>

    <string name="hello">Hello World, JPush!</string>
    <string name="tag_hint">Tag为大小写字母，数字，下划线,中文， 多个用以逗号分隔</string>
    <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
    <string name="style_hint">style为数字</string>
    <string name="error_style_empty">style不能为空</string>
    <string name="error_alias_empty">alias不能为空</string>
    <string name="error_tag_empty">tag不能为空</string>
    <string name="error_tag_gs_empty">格式不对</string>
    <string name="error_network">网络连接异常,初始化失败 请检查网络！</string>
    <string name="logining">程序在后台执行, 请查看日志！</string>
    <string name="setting_su">设置成功</string>

</resources>
