<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/activity_register_iv"
            android:layout_width="@dimen/two_ten_dp"
            android:layout_height="@dimen/two_ten_dp"
            android:layout_margin="@dimen/five_dp"
            android:src="@mipmap/fanhui" />

        <TextView
            android:id="@+id/activity_register_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/five_dp"
            android:layout_toRightOf="@id/activity_register_iv"
            android:text="@string/return_text"
            android:textColor="@color/colorBule" />

        <TextView
            android:id="@+id/activity_register_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/five_dp"
            android:text="@string/register"
            android:textSize="@dimen/sixteen_sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_point_five_dp"
        android:layout_marginTop="@dimen/two_ten_dp"
        android:background="@color/color_gray_one" />
    <!--注册的手机号-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_marginBottom="@dimen/ten_dp"
            android:text="@string/add_eighty_six"
            android:textSize="@dimen/sixteen_sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="@dimen/two_ten_dp"
            android:layout_height="@dimen/two_ten_dp"
            android:layout_gravity="center"
            android:src="@mipmap/my_arrow" />

        <TextView
            android:layout_width="@dimen/zero_point_five_dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten_dp"
            android:background="@color/color_gray_one" />

        <EditText
            android:layout_width="@dimen/zoo_dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/five_dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/please_enter_your_phone_number"
            android:textColor="@color/color_gray_one" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_gray_one" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/two_ten_dp"
        android:background="@color/colorBule"
        android:text="@string/next_step"
        android:textColor="@color/colorWhilt" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/two_ten_dp"
            android:text="@string/registration_shall_be_deemed_as_consent"
            android:textColor="@color/colorGray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_service_agreement"
            android:textColor="@color/colorBule" />
    </LinearLayout>
</LinearLayout>