<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_point_five_dp"
        android:background="@color/color_gray_one" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="@dimen/zoo_dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/ten_dp">

            <TextView
                android:id="@+id/fragment_depreciate_brand_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brand" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bulletin_page_selsctor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/zoo_dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/ten_dp">

            <TextView
                android:id="@+id/fragment_depreciate_brand_price_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bulletin_page_selsctor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/zoo_dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/ten_dp">

            <TextView
                android:id="@+id/fragment_depreciate_brand_level_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bulletin_page_selsctor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/zoo_dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/ten_dp">

            <TextView
                android:id="@+id/fragment_depreciate_sort_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bulletin_page_selsctor" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/one_dp"
        android:background="@color/colorBalck" />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/fragment_depreciate_rv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zoo_dp"
        android:layout_weight="1" />

</LinearLayout>